fix file exists not showing up sometimes

--- a/src/Components/css/DetailsBackdrop.css
+++ b/src/Components/css/DetailsBackdrop.css
@@ -112,7 +112,6 @@
   border: none;
   border-radius: 0.2em;
   position: unset;
-  display: none;
   margin-left: 0.5em;
 }
 
